--- a/app/views/irm/group_members/new_from_person.html.erb
+++ b/app/views/irm/group_members/new_from_person.html.erb
@@ -7,7 +7,7 @@
                 var selected_code = "";
                 for(var i=0;i<e.details[0].length;i++)
                   selected_code = selected_code + e.details[0][i].id +",";
-                Y.one("#irm_support_group_member_status_code").set("value",selected_code);
+                Y.one("#irm_group_member_status_code").set("value",selected_code);
             })
       });
   });
@@ -20,7 +20,7 @@
             <tr>
               <td class="pbTitle"><h2 class="mainTitle"><%= t(:label_irm_select_result) %>&nbsp;<%= t(:label_detail_info) %></h2></td>
               <td id="topButtonRow" class="pbButton">
-                <%= form_for(@support_group_member,:url=>{:action=>"create_from_person"},:builder => LabellingFormBuilder) do |f| %>
+                <%= form_for(@group_member,:url=>{:action=>"create_from_person"},:builder => LabellingFormBuilder) do |f| %>
                   <%= f.hidden_field(:status_code) %>
                   <div class="button"><%= f.submit t(:save)%></div>
                   <div class="button"><%= link_to(t(:cancel),{:controller =>"irm/people",:action=>"show",:id=>@person.id})%></div>
@@ -34,14 +34,15 @@
         </table>
       </div>
       <div class="pbBody">
-        <%= error_for @support_group_member %>
+        <%= error_for @group_member %>
         <div id="supportGroupMembers" class="datatable" style="width:100%">
         </div>
-        <%= datatable("supportGroupMembers",url_for(:action=>"get_person_support_group",:person_id=>@person.id),
+        <%= datatable("supportGroupMembers",url_for(:action=>"get_groupable_data",:id=>@person.id,:format=>:json),
                   [{:key=>"id",:hidden=>true},
                    {:key=>"name",:label=>t(:label_irm_group_name),:searchable=>true},
-                   {:key=>"group_code",:label=>t(:label_irm_group_group_code),:searchable=>true},
-                   {:key=>"organization_name",:label=>t(:label_irm_group_organization_name)},],
+                   {:key=>"code",:label=>t(:label_irm_group_group_code),:searchable=>true},
+                   {:key=>"description",:label=>t(:label_irm_group_description),:searchable=>true}
+                   ],
                    {:paginator_box=>"personPaginator",:search_box=>"selectablePersonSearchBox",:select=>"multiple"})%>
         <div id="personPaginator"></div>
       </div>
