--- a/app/views/irm/my_info/index.html.erb
+++ b/app/views/irm/my_info/index.html.erb
@@ -202,10 +202,10 @@
           <div id="support_group" class="datatable" style="width:100%;">
           </div>
           <!-- Begin company access table -->
-            <%= datatable("support_group",url_for(:controller=>"irm/people",:action=>"get_support_group",:person_id=>@person.id),
-                              [{:key=>"id",:label=>t(:operation), :hidden => true},
-                               {:key=>"support_group_name",:label=> "11",:sortable=>true, :width=>"200px"},
-                               {:key=>"description",:label=> "11",:sortable=>true, :width=>"400px"}])%>
+            <%= datatable("support_group",url_for(:controller=>"irm/group_members",:action=>"get_data_from_person",:id=>@person.id,:format=>:json),
+                              [{:key=>"id",:label=>t(:operation),:formatter=>"Y.irm.template",:hidden=>true,:width=>"60px"},
+                               {:key=>"name",:label=>t(:label_irm_group_name),:sortable=>true},
+                               {:key=>"description",:label=>t(:label_irm_group_description),:sortable=>true}])%>
           <!-- End company access table -->
         </div>
         <div class="pbFooter secondaryPalette">
