--- a/app/views/irm/people/show.html.erb
+++ b/app/views/irm/people/show.html.erb
@@ -234,7 +234,7 @@
             <tbody>
             <tr>
               <td class="pbTitle">
-                <h3 id="id_person_support_group_title"><%=t(:label_irm_person_support_group)%></h3>
+                <h3 id="id_person_support_group_title"><%=t(:label_irm_person_group)%></h3>
               </td>
               <td class="pbButton">
                 <div class="button"><%= link_to t(:label_irm_person_add_to_support_group), "#",
