--- a/app/views/irm/people/_new_form.html.erb
+++ b/app/views/irm/people/_new_form.html.erb
@@ -1,4 +1,4 @@
-<%= common_title(:show_data) %>
+<%= common_title() %>
 <%= form_for(@person,:url=>{:action=>"create"},:as=>"irm_person",:builder => LabellingFormBuilder) do |f| %>
 <div id="ep" class="bEditBlock bPageBlock">
   <div class="pbHeader">
