--- a/app/views/irm/profiles/show.html.erb
+++ b/app/views/irm/profiles/show.html.erb
@@ -12,86 +12,10 @@
       </tbody>
     </table>
   </div>
-  <div class="pbBody">
-    <div class="pbSubheader tertiaryPalette">
-      <h3><%= t(:label_common_info) %><span class="titleSeparatingColon">:</span></h3>
-    </div>
+  <%= render :partial => "common_info", :locals => {:profile => @profile}%>
+  <%= render :partial => "kanban_info", :locals => {:profile => @profile}%>
+  <%= render :partial => "function_list", :locals => {:profile => @profile}%>
 
-    <div class="pbSubsection">
-      <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-        <tbody>
-            <tr>
-              <td class="labelCol"><label><%=(t :label_irm_profile_code)%></label></td>
-              <td class="dataCol"><%= @profile.code%></td>
-              <td class="labelCol empty">&nbsp;</td>
-              <td class="dataCol empty">&nbsp;</td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label><%=(t :name)%></label></td>
-              <td class="dataCol"><%= @profile[:name]%></td>
-              <td class="labelCol"><label><%=(t :label_irm_profile_user_license)%></label></td>
-              <td class="dataCol"><%= @profile[:user_license_name]%></td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label><%=(t :description)%></label></td>
-              <td class="dataCol" colspan="3" style="width:82%;"><%= @profile[:description]%></td>
-            </tr>
-        </tbody>
-      </table>
-    </div>
-  </div>
-  <div class="pbBody">
-    <div class="pbSubheader tertiaryPalette">
-      <h3><%= t(:label_irm_kanban) %><span class="titleSeparatingColon">:</span></h3>
-    </div>
-
-    <div class="pbSubsection">
-      <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-        <tbody>
-            <tr>
-              <td class="labelCol"><label><%=(t :label_irm_profile_ir_page_kanban)%></label></td>
-              <td class="data2Col"><%= @profile[:kanban_name]%></td>
-            </tr>
-        </tbody>
-      </table>
-    </div>
-  </div>
-
-  <div class="pbBody">
-    <div class="pbSubheader tertiaryPalette">
-      <h3><%= t(:label_irm_profile_function_list) %><span class="titleSeparatingColon">:</span></h3>
-    </div>
-
-    <div class="pbSubsection">
-      <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-        <tbody>
-        <% pfids = @profile.function_ids %>
-        <% gfs = grouped_functions(pfids) %>
-        <% fzs = function_zones %>
-        <% fzs.each do |zone|%>
-          <% next unless gfs[zone[:code]]&&gfs[zone[:code]].any?%>
-          <% tr_count = 2%>
-          <tr>
-            <td style="font-weight:bold;font-size:13px;padding:15px 0 2px 0"><%= zone[:name] %></td>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
-          </tr>
-          <tr>
-            <% gfs[zone[:code]].each do |func| %>
-                <% next unless pfids.include?(func.id) %>
-                <%= raw("</tr><tr>") if tr_count == 0 %>
-                <% tr_count = 2 if tr_count == 0 %>
-                <td class="labelCol"><%= func[:name] %></td>
-                <td class="dataCol"><%= check_img("Y") %></td>
-                <% tr_count = tr_count - 1 %>
-            <% end%>
-          </tr>
-        <%end%>
-        </tbody>
-      </table>
-    </div>
-  </div>
 </div>
 
 <%=render :partial=>"multilingual/show",:locals=>{:main_data=>@profile} %>
