--- a/app/views/csi/surveys/create_result.js.erb
+++ b/app/views/csi/surveys/create_result.js.erb
@@ -1,4 +1,4 @@
-GY.use('node',function (Y){
+$(function (){
    var subject_id = "<%=@error[0]%>";
-   Y.one("#id_"+subject_id).setContent("<%=t(:error)%>:<%=t(:label_csi_message_blank)%>");
+   $("#id_"+subject_id).html("<%=t(:error)%>:<%=t(:label_csi_message_blank)%>");
 });
