--- a/public/themes/default/stylesheets/public.css
+++ b/public/themes/default/stylesheets/public.css
@@ -51,7 +51,7 @@ h1, h2, h3, h4, h5, h6 {
     margin:0;
 }
 
-textarea {font-size: 100%;}
+textarea {font-size: 100%;resize:none;}
 
 pre {
     white-space: pre-wrap; /* css-3 */
