--- a/app/views/irm/lookup_values/get_lookup_values.html.erb
+++ b/app/views/irm/lookup_values/get_lookup_values.html.erb
@@ -1,7 +1,7 @@
 <%=datatable_view({:count=>@count,:datas=>@datas}) do |builder|%>
   <% builder.column(:id,{:title=>t(:operation), :width => "80px"}) do |data|%>
-    <%= link_to(t(:edit),{:action=>"edit",:id=>data[:id]},{:back=>true}) %>&nbsp;
-    <%= link_to(t(:show),{:action=>"show",:id=>data[:id]},{:back=>true}) %>
+    <%= link_to(t(:edit),{:action=>"edit",:id=>data[:id]}) %>&nbsp;
+    <%= link_to(t(:show),{:action=>"show",:id=>data[:id]}) %>
   <% end %>
   <% builder.column(:lookup_code,{:title=>t(:label_irm_lookup_value_lookup_code), :width => "20%"})%>
   <% builder.column(:meaning,{:title=>t(:label_meaning), :width => "25%",:searchable=>true,:sortable=>true})%>
